# expedition-tayavision

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
config/: config.yaml  model_config.py  training_config.py
config/training/: alignment.yaml  instruct.yaml
config/vision/: moonvit.yaml  siglip.yaml
docs/: training_vision_encoders_experiment.md
evaluation/: run_eval.py
evaluation/results/CohereLabs__tiny-aya-base/: cvqa_results.json
evaluation/results/CohereLabs__tiny-aya-global/: cvqa_results.json  kaleidoscope_blind_results.json  maxm_blind_results.json  mtvqa_blind_results.json
evaluation/tasks/cvqa/: cvqa_blind.yaml  cvqa_en.yaml  utils.py
evaluation/tasks/kaleidoscope/: _kaleidoscope_blind_template.yaml  kaleidoscope_blind.yaml  kaleidoscope_blind_ar.yaml  kaleidoscope_blind_bn.yaml  kaleidoscope_blind_de.yaml  kaleidoscope_blind_en.yaml  kaleidoscope_blind_es.yaml  kaleidoscope_blind_fa.yaml  kaleidoscope_blind_fr.yaml  kaleidoscope_blind_hi.yaml  kaleidoscope_blind_hr.yaml  utils.py  (+9 more)
models/: __init__.py  tiny_aya_vision.py
pipeline/: apply_lora.py  data.py  train_alignment.py  train_instruct.py
scripts/: download_llava_instruct.py  download_llava_pretrain.py  merge_weights.py  modal_download.py  modal_eval.py  modal_eval_checkpoint_en.py  modal_pytest.py  modal_train_alignment.py  modal_train_instruct.py  prepare_checkpoint.py
src/: connector.py  processing.py  vision_encoder.py
src/vision_encoders/: __init__.py  base.py  moonvit.py  siglip.py
tests/: test_lora.py  test_merge_weights.py  test_vision_encoder.py
(+41 files in other folders)
